<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="40dp"
        tools:context=".MainActivity">

    <TextView
        android:id="@+id/header"
        android:layout_width="227dp"
        android:layout_height="35dp"
        android:layout_marginTop="24dp"
        android:hint="@string/header"
        android:textColorHint="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.111"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextContact"
        android:layout_width="317dp"
        android:layout_height="46dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.162"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contact" />

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="318dp"
        android:layout_height="48dp"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.158"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <TextView
        android:id="@+id/name"
        android:layout_width="208dp"
        android:layout_height="30dp"
        android:layout_marginTop="52dp"
        android:hint="@string/name"
        android:textColorHint="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.098"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header" />

    <EditText
        android:id="@+id/editTextCvc"
        android:layout_width="105dp"
        android:layout_height="46dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.069"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cvc"
        app:layout_constraintVertical_bias="0.017" />

    <TextView
        android:id="@+id/payment"
        android:layout_width="208dp"
        android:layout_height="30dp"
        android:layout_marginTop="32dp"
        android:hint="@string/payment"
        android:textColorHint="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.093"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmail" />

    <TextView
        android:id="@+id/cardNo"
        android:layout_width="208dp"
        android:layout_height="30dp"
        android:layout_marginTop="28dp"
        android:hint="@string/cardNo"
        android:textColorHint="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.091"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="319dp"
        android:layout_height="51dp"
        android:layout_marginTop="12dp"
        android:autoText="false"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.143"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <EditText
        android:id="@+id/editTextCardNo"
        android:layout_width="323dp"
        android:layout_height="53dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.151"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardNo" />

    <TextView
        android:id="@+id/email"
        android:layout_width="208dp"
        android:layout_height="30dp"
        android:layout_marginTop="24dp"
        android:hint="@string/email"
        android:textColorHint="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.094"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextContact" />

    <TextView
        android:id="@+id/contact"
        android:layout_width="208dp"
        android:layout_height="30dp"
        android:layout_marginTop="28dp"
        android:hint="@string/contact"
        android:textColorHint="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.101"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextName" />

    <TextView
        android:id="@+id/cvc"
        android:layout_width="208dp"
        android:layout_height="30dp"
        android:layout_marginTop="24dp"
        android:hint="@string/cvc"
        android:textColorHint="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.096"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextCardNo" />

    <Button
        android:id="@+id/button1"
        android:layout_width="146dp"
        android:layout_height="42dp"
        android:layout_marginBottom="76dp"
        android:backgroundTint="#00BCD4"
        android:hint="@string/button1"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.84"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="146dp"
        android:layout_height="43dp"
        android:layout_marginBottom="40dp"
        android:backgroundTint="#00BCD4"
        android:hint="@string/button2"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.84"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button1"
        app:layout_constraintVertical_bias="0.0" />

    <LinearLayout
        android:id="@+id/radioGroup"
        android:layout_width="269dp"
        android:layout_height="45dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.092"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/payment">

        <RadioButton
            android:id="@+id/radioButton1"
            android:layout_width="132dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="@string/radioButton1"
            android:textColorHint="@color/black" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="RadioButton" />
    </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
